<resources>
    <!-- Labels -->
    <string name="app_name">FCT</string>
    <string name="labelCreadorVisitaActivity">Nueva Visita</string>
    <string name="labelAlumnos">Alumnos</string>
    <string name="labelCrearAlumno">Crear Alumno</string>
    <string name="labelProxVisitas">Próximas visitas</string>
    <string name="labelConfiguracion">Configuración</string>
    <string name="labelAcercaDe">Acerca de…</string>
    <!-- DialogPickers -->
        <string name="labelPickerFecha">Fecha</string>
        <string name="labelpickerHoraInicio">Hora Inicio</string>
        <string name="labelPickerHoraFin">Hora Fin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <!-- MENÚ -->
    <string name="action_settings">Settings</string>
    <string name="menu_guardar">Guardar</string>

    <!-- Editor de Alumnos-->
    <string name="contentImgFoto">foto</string>
    <string name="visita">Visita:</string>
        <!-- Errores campos vacíos -->
        <string name="errorTutor">Tutor necesario.</string>
        <string name="errorNombre">Nombre necesario</string>
        <string name="errorEmpresa">Empresa necesaria</string>
        <string name="errorHorario">Horario necesario</string>
        <string name="errorTelefono">Teléfono necesario</string>
        <string name="errorDireccion">Dirección necesaria</string>

    <!-- TABS-->
    <string name="tabAlumno">ALUMNO</string>
    <string name="tabTutorias">TUTORÍAS</string>

    <!-- Actividad creador visita -->
    <string name="lblDia">Día</string>
    <string name="lblHoraInicio">Hora Inicio</string>
    <string name="lblHoraFin">Hora Fin</string>
    <string name="lblResumen">Resumen</string>


    <!-- Preferencias -->
        <!-- PESTAÑA INICIAL -->
        <string name="titlePestanaInicial">Pestaña inicial</string>
        <string name="itemTutorias">Tutorías</string>
        <string name="itemProxVisitas">Próximas visitas</string>

        <string-array name="fragmentosIniciales">
            <item>@string/itemTutorias</item>
            <item>@string/itemProxVisitas</item>
        </string-array>


        <!-- ORDEN VISITAS -->
        <string name="titleOrdenVisitas">Orden Visitas</string>
        <string name="itemAscendente">Ascendente</string>
        <string name="itemDescendente">Descendente</string>


        <string-array name="ordenes">
            <item>@string/itemAscendente</item>
            <item>@string/itemDescendente</item>
        </string-array>

    <!-- AcercaDe Dialogo -->
    <string name="mensajeAcercaDe">Desarrollado por:\nAlejandro Torres Gómez</string>
    <string name="tituloAcercaDe">Acerca de…</string>
    <string name="btnPositiveAcercaDe">Aceptar</string>

    <!-- Item Prox Visita -->
    <string name="lblFecha">Fecha:</string>
    <string name="cuantoAntes">Cuanto antes</string>
    <string name="resumen">Resumen:</string>
    <string name="sinVisitas">Sin visitas</string>
    <string name="sinAlumnos">Sin alumnos</string>
</resources>
